[gd_scene load_steps=13 format=2]

[ext_resource path="res://TestWorld/Bun.png" type="Texture" id=1]
[ext_resource path="res://TestWorld/Bunny.gd" type="Script" id=2]
[ext_resource path="res://LegendOfZelda/Scripts/DialogChoices.gd" type="Script" id=3]
[ext_resource path="res://OregonTrail/Fonts/Averia_Serif_Libre/AveriaSerifLibre-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 45 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 45 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 41, 45 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 13.9637

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 6
font_data = ExtResource( 4 )

[node name="Bunny" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = 60.0
margin_top = -150.0
margin_right = 68.0
margin_bottom = -142.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBorder" type="ColorRect" parent="PopupPanel"]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0.160784, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicesBox" type="ColorRect" parent="PopupPanel/ChoicesBorder"]
margin_left = 5.0
margin_top = 5.0
margin_right = 355.0
margin_bottom = 105.0
color = Color( 0.235294, 0.156863, 0.156863, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="PopupPanel/ChoicesBorder/ChoicesBox"]
margin_left = 4.0
margin_top = 2.0
margin_right = 226.0
margin_bottom = 38.0
custom_fonts/normal_font = SubResource( 7 )
tab_size = 8
text = "I used to be the greatest HUNTER in all the land. But these days, Iâ€™m feeling a little lonely."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" type="RichTextLabel" parent="PopupPanel/ChoicesBorder/ChoicesBox"]
margin_left = 18.0
margin_top = 34.0
margin_right = 125.0
margin_bottom = 54.0
custom_fonts/normal_font = SubResource( 8 )
text = "Do you want to talk about it?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="RichTextLabel" parent="PopupPanel/ChoicesBorder/ChoicesBox"]
margin_left = 112.0
margin_top = 34.0
margin_right = 219.0
margin_bottom = 54.0
custom_fonts/normal_font = SubResource( 8 )
text = "Do I look like I care? Go suck an egg!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer0" type="ColorRect" parent="PopupPanel/ChoicesBorder/ChoicesBox"]
margin_left = 14.0
margin_top = 36.0
margin_right = 16.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer1" type="ColorRect" parent="PopupPanel/ChoicesBorder/ChoicesBox"]
margin_left = 108.0
margin_top = 36.0
margin_right = 110.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Bunny_body_entered"]
[connection signal="about_to_show" from="PopupPanel" to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
